--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,17 @@
 {
-  "name": "Tienda de VideoJuegos",
+  "name": "Tienda de Videojuegos",
   "short_name": "VideoJuegos",
   "description": "Una tienda de videojuegos en línea",
-  "start_url": "https://csrtech-studio.github.io/pwa-gamepage.github.io/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#333333",
   "icons": [
-
     {
       "src": "/images/icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
-
     {
       "src": "/images/icons/icon-512x512.png",
       "type": "image/png",
