--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,18 @@
   "name": "Tienda de Videojuegos",
   "short_name": "VideoJuegos",
   "description": "Una tienda de videojuegos en línea",
-  "start_url": "https://csrtech-studio.github.io/pwa-gamepage.github.io/index.html",
+  "start_url": "/pwa-gamepage.github.io/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#333333",
   "icons": [
     {
-      "src": "/images/icons/icon-192x192.png",
+      "src": "/pwa-gamepage.github.io/images/icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/images/icons/icon-512x512.png",
+      "src": "/pwa-gamepage.github.io/images/icons/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
